package ThucHanh_Practice.CA3;

public interface NhaDauTu {
    void CapNhatTiGia(double tiGiaMoi);
}
